GNOME Bugzilla – Bug 648419
crash in remove_capslock_feedback at gtkentry.c line 10127
Last modified: 2016-12-07 08:36:45 UTC
Version: 2.32.2 What were you doing when the application crashed? Distribution: Ubuntu 10.10 (maverick) Gnome Release: 2.32.0 2010-09-27 (Ubuntu) BugBuddy Version: 2.31.92 System: Linux 2.6.36-020636-generic #201010210905 SMP Thu Oct 21 09:08:58 UTC 2010 x86_64 X Vendor: The X.Org Foundation X Vendor Release: 10900000 Selinux: No Accessibility: Disabled GTK+ Theme: Ambiance Icon Theme: ubuntu-mono-dark GTK+ Modules: gnomesegvhandler, canberra-gtk-module Memory status: size: 905715712 vsize: 905715712 resident: 75673600 share: 37523456 rss: 75673600 rss_rlim: 18446744073709551615 CPU usage: start_time: 1303404991 rtime: 2559 utime: 2215 stime: 344 cutime:140 cstime: 24 timeout: 0 it_real_value: 0 frequency: 100 Backtrace was generated from '/usr/bin/nautilus' [Thread debugging using libthread_db enabled] [New Thread 0x7fe82763f700 (LWP 3061)] 0x00007fe8351176dd in waitpid () from /lib/libpthread.so.0
+ Trace 226836
Thread 1 (Thread 0x7fe835f36980 (LWP 3028))
Inferior 1 [process 3028] will be detached. Quit anyway? (y or n) [answered Y; input not from terminal] ----------- .xsession-errors --------------------- ** (gnome-session:3000): DEBUG: GsmDBusClient: obj_path=/org/freedesktop/DBus interface=org.freedesktop.DBus method=NameOwnerChanged ** (gnome-session:3000): DEBUG: GsmDBusClient: obj_path=/org/freedesktop/DBus interface=org.freedesktop.DBus method=NameOwnerChanged ** (gnome-session:3000): DEBUG: GsmDBusClient: obj_path=/org/freedesktop/DBus interface=org.freedesktop.DBus method=NameOwnerChanged ** (gnome-session:3000): DEBUG: GsmDBusClient: obj_path=/org/freedesktop/DBus interface=org.freedesktop.DBus method=NameOwnerChanged ** (gnome-session:3000): DEBUG: GsmDBusClient: obj_path=/org/freedesktop/DBus interface=org.freedesktop.DBus method=NameOwnerChanged ** (gnome-session:3000): DEBUG: GsmDBusClient: obj_path=/org/freedesktop/DBus interface=org.freedesktop.DBus method=NameOwnerChanged ** (gnome-session:3000): DEBUG: GsmDBusClient: obj_path=/org/freedesktop/DBus interface=org.freedesktop.DBus method=NameOwnerChanged ** (gnome-session:3000): DEBUG: GsmDBusClient: obj_path=/org/freedesktop/DBus interface=org.freedesktop.DBus method=NameOwnerChanged ** (gnome-session:3000): DEBUG: GsmDBusClient: obj_path=/org/freedesktop/DBus interface=org.freedesktop.DBus method=NameOwnerChanged warning: the debug information found in "/usr/lib/debug//usr/lib/libxml2.so.2.7.7" does not match "/usr/lib/libxml2.so.2" (CRC mismatch). warning: the debug information found in "/usr/lib/debug/usr/lib/libxml2.so.2.7.7" does not match "/usr/lib/libxml2.so.2" (CRC mismatch). --------------------------------------------------
looks like gtk+ problem
-> gtk+ Indeed.
*** Bug 759014 has been marked as a duplicate of this bug. ***
Now fixed in gtk-2-24 too: commit 2811221d7039bd82265ce36a1b0dd9a0eeb431ad Author: Matthias Clasen <mclasen@redhat.com> Date: Tue Apr 26 07:48:27 2011 -0400 GtkEntry: Explicitly disconnect keymap signals Might fix https://bugzilla.gnome.org/show_bug.cgi?id=648419 (cherry picked from commit 7d3693b82b02f047cb26649b1d871af7902a5d70) gtk/gtkentry.c | 31 ++++++++++++++++++------------- 1 file changed, 18 insertions(+), 13 deletions(-)
*** Bug 764285 has been marked as a duplicate of this bug. ***
*** Bug 764323 has been marked as a duplicate of this bug. ***
In the last commit bf2471a, the problem appears again, when I hit accidentally the caps or tab keys. My DE is GNOME 3.10 Ubuntu Gnome 14.04.2
(In reply to jose americo gobbo from comment #7) > In the last commit bf2471a, the problem appears again, when I hit > accidentally the caps or tab keys. > My DE is GNOME 3.10 > Ubuntu Gnome 14.04.2 Output of terminal: (gimp-2.9:20617): GLib-GObject-CRITICAL **: g_type_instance_get_private: assertion 'instance != NULL && instance->g_class != NULL' failed (gimp-2.9:20617): GLib-GObject-CRITICAL **: g_type_instance_get_private: assertion 'instance != NULL && instance->g_class != NULL' failed ./gimp-2.9: fatal error: Segmentation fault ./gimp-2.9 (pid:20617): [E]xit, [H]alt, show [S]tack trace or [P]roceed: E The problem is when I use the CapsLock.
*** Bug 766445 has been marked as a duplicate of this bug. ***
*** Bug 775720 has been marked as a duplicate of this bug. ***