GtkEntry: Explicitly disconnect keymap signals

Might fix https://bugzilla.gnome.org/show_bug.cgi?id=648419

(cherry picked from commit 7d3693b82b02f047cb26649b1d871af7902a5d70)